--- a/HTML/Assignment-Core-HTML/index.html
+++ b/HTML/Assignment-Core-HTML/index.html
@@ -7,8 +7,8 @@
     <style>
         ul {
             font-size: xx-large;
-            margin: 10% auto;   
-            width: 35%;
+            margin: auto;   
+            width: 20%;
         }
          li {
             padding-bottom:40px ;
@@ -29,16 +29,31 @@
             <a href="2.html">2.html</a>
         </li>
         <li>
-            <a href="5.html">5.html</a>
+            <a href="3-0.html">3-0.html</a>
         </li>
         <li>
-            <a href="5.md">5.md</a>
+            <a href="4.html">4.html</a>
+        </li>
+        <li>
+            <a href="5.html">5.html</a>
         </li>
         <li>
             <a href="6.html">6.html</a>
         </li>
         <li>
-            <a href="6.md">6.md</a>
+            <a href="7.html">7.html</a>
+        </li>
+        <li>
+            <a href="8.html">8.html</a>
+        </li>
+        <li>
+            <a href="2334.html">2334.html</a>
+        </li>
+        <li>
+            <a href="web-design.html">web-design.html</a>
+        </li>
+        <li>
+            <a href="web-development.html">web-development.html</a>
         </li>
     </ul>
 </body>
