--- a/HTML/Assignment-Core-HTML/web-development.html
+++ b/HTML/Assignment-Core-HTML/web-development.html
@@ -61,7 +61,7 @@
                 Home
             </div>
         </a>
-        <a href="/web-development.html">
+        <a href="./web-development.html">
            <div class="navlist">
               Web Development
              </div>
