--- a/HTML/Assignment-SEO/index.html
+++ b/HTML/Assignment-SEO/index.html
@@ -3,10 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="icon" href="https://pwskills.com/images/favicon.ico"/>
+    <title>PW Skills Assignments</title>
+    <style>
+        ul {
+            font-size: xx-large;
+            margin: 10% auto;   
+            width: 35%;
+        }
+         li {
+            padding-bottom:40px ;
+            list-style-type: none;
+            a{
+                color: #5568F1;
+                text-decoration: none;
+            }
+         }
+    </style>
 </head>
 <body>
-    
+    <ul>
+        <li>
+            <a href="1.html">1.html</a>
+        </li>
+        <li>
+            <a href="2.html">2.html</a>
+        </li>
+        <li>
+            <a href="3.html">3.html</a>
+        </li>
+    </ul>
 </body>
 </html>
