--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <ul>
         <li>
-            <a href="/HTML">HTML</a>
+            <a href="HTML/index.html">HTML</a>
         </li>
         <li>
             <a href="/CSS/">CSS</a>
