--- a/HTML/Assignment-Media-&-Forms/index.html
+++ b/HTML/Assignment-Media-&-Forms/index.html
@@ -23,19 +23,22 @@
 <body>
     <ul>
         <li>
-            <a href="./Assinment-Getting-Started-With-HTML/index.html">Assinment-Getting-Started-With-HTML</a>
+            <a href="1.html">1.html</a>
         </li>
         <li>
-            <a href="./Assignment-Core-HTML/index.html">Assignment-Core-HTML</a>
+            <a href="2.html">2.html</a>
         </li>
         <li>
-            <a href="./Assignment-Modern-HTML/index.html">Assignment-Modern-HTML</a>
+            <a href="3.html">3.html</a>
         </li>
         <li>
-            <a href="./Assignment-Media-&-Forms/index.html">Assignment-Media-&-Forms</a>
+            <a href="4.html">4.html</a>
         </li>
         <li>
-            <a href="./Assignment-SEO/index.html">Assignment-SEO</a>
+            <a href="5.html">5.html</a>
+        </li>
+        <li>
+            <a href="5-.html">6.html</a>
         </li>
     </ul>
 </body>
