--- a/CSS/Flex-Box-on-CSS/3.html
+++ b/CSS/Flex-Box-on-CSS/3.html
@@ -6,7 +6,7 @@
     <title>Cente Flex Box</title>
     <style>
         body {
-            height: 99vh;
+            height: 98vh;
         }
         .flex-center {
           display: flex;
@@ -15,11 +15,11 @@
         }
         .flex-child{
             background-color: green;
-            height: 20%;
-            width: 20%;
+            height: 20vh;
+            width: 20vh;
         }
       </style>
-      
+
 </head>
 <body class="flex-center">
     <div class="flex-child">
