added pricing section hover list style change in color

--- a/CSS/Flex-Box-on-CSS/4.html
+++ b/CSS/Flex-Box-on-CSS/4.html
@@ -46,7 +46,9 @@
       transition: all 250ms ease-in-out;
       cursor: pointer;
       }
-
+      .box:hover{ li{
+        list-style-image: url(plan-details-list-white.svg);
+      }}
 
 
 
