soupdated pricing,q4 of media query

--- a/CSS/Flex-Box-on-CSS/4.html
+++ b/CSS/Flex-Box-on-CSS/4.html
@@ -19,12 +19,15 @@
       height: 96vh;
       width: 98vw;
       background-color: #E6E6E4;
-
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     .main {
       display: flex;
       justify-content: space-evenly;
       margin-top: 2%;
+      gap: 25px;
     }
 
     .box {
@@ -42,6 +45,7 @@
     .box:hover{
       color: #f2f2f2;
       background-color: #30475E;
+      scale: 1.05;
       transition: all 250ms ease-in-out;
       cursor: pointer;
       }
