--- a/CSS/More-on-CSS-selectors/4.html
+++ b/CSS/More-on-CSS-selectors/4.html
@@ -7,6 +7,6 @@
   <link rel="stylesheet" href="4.css">
 </head>
 <body>
-  <button class="pw-button">PW Skills</button>
+  <button class="pw-button"></button>
 </body>
 </html>
