fixed issues irctc clone

--- a/CSS/Flex-Box-on-CSS/5.html
+++ b/CSS/Flex-Box-on-CSS/5.html
@@ -102,9 +102,12 @@
                 </div>
               </div>
             </div>
-            <div class=" class-details place-details">
-              <div class=" class-details-img place-details-img">
-                <img class="class-details-logo place-details-from-logo" src="./assets/class.png" />
+            <div class="class-details place-details">
+              <div class="class-details-img place-details-img">
+                <img
+                  class="class-details-logo place-details-from-logo"
+                  src="./assets/class.png"
+                />
               </div>
               <div class="class-details place-details-from">
                 <div class="class-name from">Class</div>
@@ -114,7 +117,10 @@
             </div>
             <div class="seat-details destination">
               <div class="seat-details-img destination-img">
-                <img src="./assets/seat-type.png" class="seat-details-logo destination-to-logo" />
+                <img
+                  src="./assets/seat-type.png"
+                  class="seat-details-logo destination-to-logo"
+                />
               </div>
               <div class="seat-details destination-to">
                 <div class="seat-details-type to">Seat Type</div>
@@ -123,6 +129,10 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="train-search">
+          <span>Search Trains </span>
+          <img src="./assets/arrow-forward.png" alt="" />
         </div>
       </div>
       <div class="vande-bharat-express-rail">
