fixed some  issues

--- a/CSS/Media-Query/1.html
+++ b/CSS/Media-Query/1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responcive</title>
+    <title>Responsive</title>
     <link rel="icon" href="https://pwskills.com/images/favicon.ico" />
     <style>
       * {
@@ -80,13 +80,13 @@
     </navbar>
     <div class="nav">
       <a href="#">
-        <div class="navlist">Home</div>
+        <div class="navlist">Web </div>
       </a>
       <a href="#">
-        <div class="navlist">Web Development</div>
+        <div class="navlist">Development</div>
       </a>
       <a href="#">
-        <div class="navlist">Web Design</div>
+        <div class="navlist">Design</div>
       </a>
     </div>
     <hr />
