--- a/CSS/Flex-Box-on-CSS/3.html
+++ b/CSS/Flex-Box-on-CSS/3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cente Flex Box</title>
+    <title>Center Flex Box</title>
     <style>
         body {
             height: 98vh;
