some minor changes

--- a/HTML/Assignment-Core-HTML/3-0.html
+++ b/HTML/Assignment-Core-HTML/3-0.html
@@ -99,7 +99,7 @@
     <hr/>
     <main>
         <div id="mypicture">
-            <img src="my_picture-oval.png" alt="My Picture">
+            <img src="my_picture-oval-comp.png" alt="My Picture">
         </div>
         <div id="myinfo">
             <ul>
