--- a/HTML/Assignment-Core-HTML/web-design.html
+++ b/HTML/Assignment-Core-HTML/web-design.html
@@ -56,17 +56,17 @@
        <img id="mylogo" src="./my_logo.png" alt="My_logo" />
    </navbar>
    <div class="nav">
-       <a href="/3-0.html">
+       <a href="/HTML/Assignment-Core-HTML/3-0.html">
             <div class="navlist">
                Home
            </div>
        </a>
-       <a href="/web-development.html">
+       <a href="/HTML/Assignment-Core-HTML/web-development.html">
           <div class="navlist">
              Web Development
             </div>
        </a> 
-       <a href="/web-design.html"> 
+       <a href="/HTML/Assignment-Core-HTML/web-design.html"> 
            <div class="navlist">
                Web Design
            </div>
