--- a/CSS/Flex-Box-on-CSS/4.html
+++ b/CSS/Flex-Box-on-CSS/4.html
@@ -50,7 +50,7 @@
       cursor: pointer;
       }
       .box:hover{ li{
-        list-style-image: url(assets/plan-details-list-white.svg);
+        list-style-image: url(./assets/plan-details-list-white.svg);
       }}
 
 
@@ -70,7 +70,7 @@
 
     .plan-details {
       li {
-        list-style-image: url(assets/plan-details-list.svg);
+        list-style-image: url(./assets/plan-details-list.svg);
         margin: 1.5vw 0vw;
       }
     }
