--- a/CSS/index.html
+++ b/CSS/index.html
@@ -23,9 +23,9 @@
 </head>
 <body>
     <ul>
-        <li><a href="/Starting-with-CSS">Starting with CSS </a></li>
-        <li><a href="/More-on-CSS/">More on CSS </a></li>
-        <li><a href="/Positions-in-CSS/">Positions in CSs </a></li>
+        <li><a href="./Starting-with-CSS">Starting with CSS </a></li>
+        <li><a href="./More-on-CSS/">More on CSS </a></li>
+        <li><a href="./Positions-in-CSS/">Positions in CSs </a></li>
     </ul>
 </body>
 </html>
