--- a/CSS/More-on-CSS/index.html
+++ b/CSS/More-on-CSS/index.html
@@ -23,14 +23,14 @@
 </head>
 <body>
     <ul>
-        <li><a href="1.html"><strong>1.</strong> Navbar</a></li>
-        <li><a href="2.html"><strong>2.</strong> Card</a></li>
-        <li><a href="3.html"><strong>3.</strong> Navbar Border</a></li>
-        <li><a href="4.html"><strong>4.</strong> circle image</a></li>
-        <li><a href="5.html"><strong>5.</strong> Google Fonts Blog</a></li>
-        <li><a href="6.html"><strong>6.</strong> About Us</a></li>
-        <li><a href="7.html"><strong>7.</strong> Hover & Opacity</a></li>
-        <li><a href="8.html"><strong>8.</strong> System Requirments</a></li>
+        <li><a href="./1.html"><strong>1.</strong> Navbar</a></li>
+        <li><a href="./2.html"><strong>2.</strong> Card</a></li>
+        <li><a href="./3.html"><strong>3.</strong> Navbar Border</a></li>
+        <li><a href="./4.html"><strong>4.</strong> circle image</a></li>
+        <li><a href="./5.html"><strong>5.</strong> Google Fonts Blog</a></li>
+        <li><a href="./6.html"><strong>6.</strong> About Us</a></li>
+        <li><a href="./7.html"><strong>7.</strong> Hover & Opacity</a></li>
+        <li><a href="./8.html"><strong>8.</strong> System Requirments</a></li>
 
     </ul>
 </body>
