--- a/CSS/Positions-in-CSS/index.html
+++ b/CSS/Positions-in-CSS/index.html
@@ -23,10 +23,10 @@
 </head>
 <body>
     <ul>
-        <li><a href="1.html"><strong>1.</strong> Box Position</a></li>
-        <li><a href="3.html"><strong>3.</strong> Earth</a></li>
-        <li><a href="4.html"><strong>4.</strong> Sticky NavBar</a></li>
-        <li><a href="5.html"><strong>4.</strong> Z-index</a></li>
+        <li><a href="./1.html"><strong>1.</strong> Box Position</a></li>
+        <li><a href="./3.html"><strong>3.</strong> Earth</a></li>
+        <li><a href="./4.html"><strong>4.</strong> Sticky NavBar</a></li>
+        <li><a href="./5.html"><strong>4.</strong> Z-index</a></li>
     </ul>
 </body>
 </html>
