--- a/CSS/Starting-with-CSS/index.html
+++ b/CSS/Starting-with-CSS/index.html
@@ -23,9 +23,9 @@
 </head>
 <body>
     <ul>
-        <li><a href="./1.html"><strong>1.</strong> CSS Styling methods</a></li>
-        <li><a href="./2.html"><strong>2.</strong> BEM Styled Paragraphs</a></li>
-        <li><a href="./3.html"><strong>3.</strong> Form</a></li>
+        <li><a href="/CSS/Starting-with-CSS/1.html"><strong>1.</strong> CSS Styling methods</a></li>
+        <li><a href="/CSS/Starting-with-CSS/2.html"><strong>2.</strong> BEM Styled Paragraphs</a></li>
+        <li><a href="/CSS/Starting-with-CSS/3.html"><strong>3.</strong> Form</a></li>
     </ul>
 </body>
 </html>
